--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nuxt-app",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
+    "build": "prisma generate && prisma migrate deploy && nuxt build",
     "dev": " nuxt dev --dotenv .env.development.local",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "vercel-build": "prisma generate && prisma migrate deploy && nuxt build",
+    "start": "node ./server/index.mjs",
     "postinstall": "nuxt prepare",
     "prisma:migrate:dev": "npx prisma migrate dev",
     "prisma:migrate:generate": "npx prisma generate",
@@ -38,5 +38,8 @@
     "pinia": "^2.1.7",
     "resend": "^2.0.0",
     "stripe": "^14.8.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
