--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,33 @@
-version: "3.7"
-
-# For local development, only database is running
-#
-# docker-compose up -d
-#
+version: '3.7'
 
 services:
-  default_database:
+  ofs_pgsql:
     restart: unless-stopped
     image: postgres:latest
     volumes:
-      - default_database_data:/var/lib/postgresql/data
+      - ofs_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=${DEFAULT_DATABASE_DB}
-      - POSTGRES_USER=${DEFAULT_DATABASE_USER}
-      - POSTGRES_PASSWORD=${DEFAULT_DATABASE_PASSWORD}
-    env_file:
-      - .env
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - "${DEFAULT_DATABASE_PORT}:5432"
+      - '${DEFAULT_DATABASE_PORT}:5432'
+    volumes:
+      default_database_data:
+  ofs_nuxt:
+    restart: unless-stopped
+    image: ghcr.io/selfagency/openformstack:latest
+    environment:
+      DEFAULT_DATABASE_HOSTNAME=${DEFAULT_DATABASE_HOSTNAME}
+      DEFAULT_DATABASE_USER=${DEFAULT_DATABASE_USER}
+      DEFAULT_DATABASE_PASSWORD=${DEFAULT_DATABASE_PASSWORD}
+      DEFAULT_DATABASE_PORT=${DEFAULT_DATABASE_PORT}
+      DEFAULT_DATABASE_DB=${DEFAULT_DATABASE_DB}
+      DATABASE_URL=${DATABASE_URL}
+      GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      API_ROUTE_SECRET=${API_ROUTE_SECRET}
+      RESEND_API_KEY=${RESEND_API_KEY}
+      FROM_MAIL=${FROM_MAIL}
+      BASE_URL=${BASE_URL}
 
-volumes:
-  default_database_data:
