--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,10 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - '${DEFAULT_DATABASE_PORT}:5432'
-    volumes:
-      default_database_data:
   ofs_nuxt:
     restart: unless-stopped
     image: ghcr.io/selfagency/openformstack:latest
-    environment:
-      DEFAULT_DATABASE_HOSTNAME=${DEFAULT_DATABASE_HOSTNAME}
+    environment: DEFAULT_DATABASE_HOSTNAME=${DEFAULT_DATABASE_HOSTNAME}
       DEFAULT_DATABASE_USER=${DEFAULT_DATABASE_USER}
       DEFAULT_DATABASE_PASSWORD=${DEFAULT_DATABASE_PASSWORD}
       DEFAULT_DATABASE_PORT=${DEFAULT_DATABASE_PORT}
@@ -31,3 +28,5 @@ services:
       FROM_MAIL=${FROM_MAIL}
       BASE_URL=${BASE_URL}
 
+volumes:
+  ofs_data:
