--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: ofs
+          POSTGRES_PASSWORD: ofstemp12345
+          POSTGRES_DB: ofs_data
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,6 +39,7 @@ jobs:
         with:
           cache: true
           push: true
+          env: DATABASE_URL=postgres://ofs:ofstemp12345@localhost:5432/ofs_data
           tags: |
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
